@@ -382,7 +382,7 @@ preferences_update_fonts (gpointer unused)
 	preferences_get_font_names (use_system_fonts,
 				    &var_font_name, &fixed_font_name);
 
-    // FIXME: Set WebKit font preferences
+    /* FIXME: Set WebKit font preferences using WebSettings */
 
 	g_free (var_font_name);
 	g_free (fixed_font_name);
